RESOLVED FIXED120639
ASSERT in MarkedAllocator::allocateSlowCase is wrong
https://bugs.webkit.org/show_bug.cgi?id=120639
Summary ASSERT in MarkedAllocator::allocateSlowCase is wrong
Mark Hahnenberg
Reported 2013-09-03 10:27:52 PDT
ASSERT(!m_heap->shouldCollect()) is no longer true due to our use of the GC deferral mechanism. We could technically be beyond our byte allocation limit, but still not try to collect due to deferral. We should either amend shouldCollect to account for GC deferral or remove this ASSERT.
Attachments
Patch (1.53 KB, patch)
2013-09-03 10:39 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2013-09-03 10:39:43 PDT
Mark Hahnenberg
Comment 2 2013-09-04 11:43:38 PDT
WebKit Commit Bot
Comment 3 2013-09-04 12:05:27 PDT
Comment on attachment 210385 [details] Patch Clearing flags on attachment: 210385 Committed r155056: <http://trac.webkit.org/changeset/155056>
WebKit Commit Bot
Comment 4 2013-09-04 12:05:29 PDT
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 5 2013-09-04 14:01:35 PDT
The debug bots started crashing. E.g.: http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK2%20(Tests)/r155055%20(12191)/results.html It looks related to this change. Can you please have a look?
Note You need to log in before you can comment on or make changes to this bug.